FPALU: FPADD Bug Fix

--- a/FPU/jupyter/FPConvert.ipynb
+++ b/FPU/jupyter/FPConvert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "05d07dc7",
    "metadata": {},
    "outputs": [
@@ -29,6 +29,9 @@
     "FP32_MAN_LEN = 23\n",
     "FP32_EXP_LEN = 8\n",
     "FP32_EXP_BIAS = 2**(FP32_EXP_LEN-1)-1         # 127\n",
+    "FP29i_MAN_LEN = 22\n",
+    "FP29i_EXP_LEN = 6\n",
+    "FP29i_EXP_BIAS = 2**(FP29i_EXP_LEN-1)-1         # 127\n",
     "FP64_MAN_LEN = 52\n",
     "FP64_EXP_LEN = 11\n",
     "FP64_EXP_BIAS = 2**(FP64_EXP_LEN-1)-1         # 1023\n",
@@ -36,6 +39,7 @@
     "FMT_FP16  = [1,FP16_MAN_LEN,FP16_EXP_BIAS,FP16_EXP_LEN]\n",
     "FMT_FP32  = [1,FP32_MAN_LEN,FP32_EXP_BIAS,FP32_EXP_LEN]\n",
     "FMT_FP32N = [3,FP32_MAN_LEN,FP32_EXP_BIAS,FP32_EXP_LEN]\n",
+    "FMT_FP29i = [1,FP29i_MAN_LEN,FP29i_EXP_BIAS,FP29i_EXP_LEN]\n",
     "#            \\._ 1: has_denorm 3: force_denorm \n",
     "\n",
     "# CAUTION: Python List and Binary indexes left-to-right\n",
@@ -177,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 13,
    "id": "4c8a2d0f",
    "metadata": {
     "scrolled": true
@@ -283,32 +287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 14,
    "id": "7e1a1741",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fpdecode: DENORM\n",
-      "- pass - Unity\n",
-      "Expected:   0\n",
-      "Actual:     0.0\n",
-      "- pass - Add Positive With Zero\n",
-      "Expected:   2\n",
-      "Actual:     2.0\n",
-      "- pass - Add Negative With Zero\n",
-      "Expected:   -2\n",
-      "Actual:     -2.0\n",
-      "- FAIL -  Infinite Fractal\n",
-      "Expected:   -0.16666666666666669\n",
-      "Actual:     -0.166748046875\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note: For simplicity, ALL INTERNAL DATA is encoded in NON-NORMALIZED FORMAT\n",
     "# that is: no hidden ones at the beginning of each encoded number, all digits are explicitly listed\n",
@@ -354,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 16,
    "id": "4d1a1869",
    "metadata": {
     "scrolled": true
@@ -811,6 +795,65 @@
    "source": [
     "len(boothr4_encode([0]*11))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "71720715",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:  0 001001 000000101010011010100100100\n",
+      "B:  1 100000 000100010010101111010000001\n",
+      "ALU:\n",
+      "A: 000100010010101111010000001\n",
+      "B: 000000000000000000000000000\n",
+      "after ALU: exp: 100000 many: 000100010010101111010000001\n",
+      "many_zerocount: 3\n",
+      "after SFT: exp: 011101 many: 1000100101011110100000010000\n",
+      "1 01110100 0100101011110100000010000\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = strdnum('00010010000101010011010100100100')\n",
+    "b = strdnum('11000000100010010101111010000001')\n",
+    "DEBUGMODE = 1;\n",
+    "y = numdstr(fpadd_ifmt(FMT_FP29i, a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "51fde7a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'000100101011110100000010000'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[1:FP29i_EXP_LEN+1]\n",
+    "y[FP29i_EXP_LEN+1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bafe227b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
